# ACS

./: README.md  Отчет АВС Задание 1.docx
Task 1/project/: CMakeLists.txt  circle.cpp  container.cpp  rectangle.cpp  shape.h  triangle.cpp  triangle.h
Task 2/: Отчет АВС 2.docx
Task 2/Task/: CMakeCache.txt  CMakeLists.txt  Circle.cpp  Circle.h  Container.cpp  Container.h  Makefile  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Task  Triangle.cpp  Triangle.h  cmake_install.cmake  main.cpp  rnd.h
Task 2/Task/Tests/Test1/: output1.txt  sorted1.txt
Task 2/Task/Tests/Test2/: output2.txt  sorted2.txt
Task 2/Task/Tests/Test3/: output3.txt  sorted3.txt
Task 2/Task/Tests/Test4/: output4.txt  sorted4.txt
Task 2/Task/Tests/Test8/: output8.txt  sorted8.txt
Task 2/Task/Tests/Test9/: output9.txt  sorted9.txt
Task 3/: circle.py  container.py  main.py  rectangle.py  rnd.py  shape.py  triangle.py  Отчет АВС 3.docx
Task 3/Tests/Test1/: output1.txt  sorted1.txt
Task 3/Tests/Test2/: output2.txt  sorted2.txt
Task 3/Tests/Test3/: output3.txt  sorted3.txt
Task 3/Tests/Test8/: output8.txt  sorted8.txt
Task 3/Tests/Test9/: output9.txt  sorted9.txt
Task 4/: Отчет АВС 4.docx
Task 4/Task/: input.asm  input.lst  inrnd.asm  inrnd.lst  macros.mac  main.asm  main.lst  output.asm  output.lst  perimeter.asm  perimeter.lst  task
Task 4/Tests/Test1/: output1.txt  sorted1.txt
Task 4/Tests/Test2/: input2.txt  output2.txt  sorted2.txt
Task 5/: Отчет АВС 5.docx
Task 5/Task/: a.out  main.cpp
project/: circle.h  container.h  main.cpp  rectangle.h  rnd.h  shape.cpp
(+11 files in other folders)
